# ecomapp

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/core/: conf.py
src/db/: database.py
src/dependencies/: dependencies.py
src/management/: autobootstrap.py  bootstrap_roles_permission.py  bootstrap_superuser.py
src/models/: models.py  queries.py  users.py
src/routers/: auth.py  cart_items.py  carts.py  categories.py  orders.py  products.py  role.py  users.py
src/schemas/: cart.py  cart_item.py  category.py  order.py  product.py  tokens.py  user.py
src/services/: auth.py  cart_item.py  carts.py  category.py  crud.py  orders.py  products.py  user.py
